- StateMachine.getStateForEvent fixed - CharsetSanitizer multichar replacement fixed - PessimisticJpaRepository findByIdReadOnly uses a read-only session - HttpMediaTypeNotSupportedException produces HTTP 400 instead og HTTP 500 - terminatePermanentlyFailingEntities removed